--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^6.1.6",
     "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.3.0",
+    "@vercel/analytics": "^1.4.1",
     "axios": "^1.7.7",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.459.0",
